fix the 4 images on mobile

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ ul {
     text-align: center;
 }
 
+
 .subscribe-section {
     position: relative;
     text-align: center;
@@ -225,12 +226,23 @@ ul {
     background-color: #555; 
   }
   @media (max-width: 990px) {
-    /* Styles for mobile view */
     .navbar-nav{
         display: flex;
         align-items:flex-start;
         justify-content: center;
         flex-direction: column;
         gap: 8px;
+    }
+}
+@media (max-width: 768px) { 
+    .grid-item {
+        margin-bottom: 150px; 
+    }
+    .grid-item img {
+        margin-bottom: 0; 
+        
+    }
+    .text {
+        margin-top: 0; 
     }
 }
